libpod-thread-perl (0.11-1) UNRELEASED; urgency=low

  * New upstream version.

 -- Russ Allbery <rra@debian.org>  Wed, 12 Nov 2008 19:51:46 -0800

libpod-thread-perl (0.10-1) unstable; urgency=low

  * Initial Debian packaging.

 -- Russ Allbery <rra@debian.org>  Tue, 15 Apr 2008 23:59:11 -0700
