@@ -1,7 +1,7 @@
 Source: libpod-thread-perl
 Section: perl
 Priority: extra
-Build-Depends: debhelper (>= 5)
+Build-Depends: debhelper (>= 7)
 Build-Depends-Indep: perl
 Maintainer: Russ Allbery <rra@debian.org>
 Standards-Version: 3.7.3
