@@ -1,66 +1,3 @@
 #!/usr/bin/make -f
-# Rules for building libpgp-sign-perl.
-#
-# Based on:
-#
-# This debian/rules file is provided as a template for normal perl
-# packages. It was created by Marc Brockschmidt <marc@dch-faq.de> for
-# the Debian Perl Group (http://pkg-perl.alioth.debian.org/) but may
-# be used freely wherever it is useful.
-
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
-
-# If set to a true value then MakeMaker's prompt function will
-# always return the default without waiting for user input.
-export PERL_MM_USE_DEFAULT=1
-
-PACKAGE = $(shell dh_listpackages)
-TMP     = $(CURDIR)/debian/$(PACKAGE)
-PERL   ?= /usr/bin/perl
-
-build: build-arch build-indep
-build-arch:
-build-indep: build-stamp
-build-stamp:
-	dh_testdir
-	$(PERL) Makefile.PL INSTALLDIRS=vendor
-	$(MAKE)
-	touch $@
-
-clean:
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp install-stamp
-	[ ! -f Makefile ] || $(MAKE) distclean
-	dh_clean
-
-install: install-stamp
-install-stamp: build-stamp
-	dh_testdir
-	dh_testroot
-	dh_clean
-	$(MAKE) install DESTDIR=$(TMP) PREFIX=/usr
-	[ ! -d $(TMP)/usr/lib/perl5 ] \
-	    || rmdir --ignore-fail-on-non-empty --parents $(TMP)/usr/lib/perl5
-	touch $@
-
-binary: binary-arch binary-indep
-binary-arch:
-binary-indep: build-stamp install-stamp
-	dh_testdir
-	dh_testroot
-	dh_installdocs README
-	dh_installchangelogs ChangeLog
-	dh_perl
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
-	dh_installdeb
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-.PHONY: binary binary-arch binary-indep build build-arch build-indep clean
-.PHONY: install
+%:
+	dh $@
