@@ -1,6 +1,8 @@
 libpod-thread-perl (0.11-1) UNRELEASED; urgency=low
 
   * New upstream version.
+  * Update debhelper compatibility level to V7.
+    - Use the minimal debhelper rules file.
 
  -- Russ Allbery <rra@debian.org>  Wed, 12 Nov 2008 19:51:46 -0800
 
